# real_time_data_pipeline

./: .gitignore  CMakeLists.txt
include/: consumer.hpp  producer.hpp
src/: consumer.cpp  main.cpp  producer.cpp
